2009-02-05 Thu  Jari Aalto  <jari dot aalto A T cante dot net>

        * html/install/index.txt (1.2 Unpacking): Write graph. Remove
        `mkdir' commands.
        (1.1 Foreword): Correct title.
        (Table of contents): Regenerate.
        (1.5 Advanced install -- using autoload files): Adjust comments
        in example.

	* html/devel/index.txt (Emacs Tiny Tools Project): Ad dshort 255
	character info.
	(1.2 Releases): Add savanah snapshot.
	(1.4 Project documentation): Rewrite.

2008-09-15  Jari Aalto  <jari.aalto@cante.net>

	* INSTALL: (top level file): New.

	* html/install/index.txt (1.3 Quick install -- personal): Rewrote
	instructions. Suggest simple `add-to-list'.
	(1.4 Advanced install -- using tinypath): Rearrange sections.

2008-08-21  Jari Aalto  <jari.aalto@cante.net>

	* txt/LICENSE.txt: change 'must be', to 'best be' in regards
	to dual licence and it's other part removal.

	General: Everything in the documentation dorectories havd
	been rearranged. Now each file is in its own directory.

	* html/install/index.txt
	(1.4 Quick install -- site wide): Correct heading position.

2008-03-05  Jari Aalto  <jari.aalto@cante.net>

	* txt/emacs-elisp.txt: (4.3 Emacs Humor): Add
	'World domination', 'Emacs and the VI editor battle'.

2006-01-23 Mon  Jari Aalto  <jari dot aalto A T cante dot net>

        * txt/emacs-elisp.txt (5.1 Win32 Emacs ports): Removed obsolete
        mailing list address and hyperachive.
        (1.1 Important Emacs links): Spell mistakes fixed. Thanks to
        Giorgos Keramidas <keramida A T ceid upatras gr>
        (2.0 GNU Emacs): Removed separate CVS bullet and added it next to
        savannah.
        (5.2.2 CVS access): Removed XEmacs instructions. Already mentioned
        at the beginning of heading XEmacs.
        (5.2.3 Tips for debugging): This one line comment is too alone. Moved
        it to the beginning.
        (5.3 Emacs or Unix-like Win32 programs): Removed. Cygwin is now