@@ -527,17 +527,15 @@ Brief History
 <A HREF="http://www.gnu.org/copyleft/gpl.html">
 http://www.gnu.org/copyleft/gpl.html</A>.
 
-    Tiny Tools is an on-going "hobby", that started with one Emacs package,
-    then next, and next in 1994 to help use Emacs more conveniently in
-    daily work. Last Unix-only kit was released at the beginning of 1999
-    using Emacs 19.28 and 20.1. It had very little Win32 Emacs support and
-    even more little XEmacs support (19.14). There has been period of
-    inactivity, due to more busy days in regular daily work, nice long
-    vacations at summer and moving the development environment from Unix to
-    PC, changing version control software and repositories multiple times.
-    The move to a PC platform was more painful than was expected because
-    all the building tools had to be made from scratch. But the sourceforge
-    pays the well the efforts.
+    Tiny Tools is an on-going "hobby", that started with one Emacs
+    package, then next, and next in 1994 to help use Emacs more
+    conveniently in daily work. Last Unix-only kit was released at the
+    beginning of 1999 using Emacs 19.28 and 20.1. It had very little
+    Win32 Emacs support and even more little XEmacs support (19.14).
+    There has been period of inactivity, due to normal requirements in
+    daily work. The Operating systems, version control software and
+    repositories have chnaged multiple times.
+
 
 <!--  .......................................................................
       HEADING
@@ -594,19 +592,12 @@ Emacs Version Compatibility
 Contact
 </H1>
 
-    <P> There is no mailing list for the project. See
-
-    <a href="http://bazaar-vcs.org/JariAalto">
-    Development page
-    </a>
-
+    There no mailing list for the project. Contact maintainer as
     needed by including "tiny-tools" in the subject (otherwise message
-    may be classified as spam by the fileters). Report problems to
-    <a href="https://savannah.nongnu.org/projects/emacs-tiny-tools">bug
-    tracker</a>. NOTE: You need to register an account at Savannah in
-    order to post; the greyed out or 'striked through' items indicate that
-    you haven't logged in.
-
+    may be classified as spam by the filters). Report suggestions and
+    problems
+    to <a href="https://savannah.nongnu.org/projects/emacs-tiny-tools">bug
+    tracker</a>. In order to use trackers, a Savannah account is needed.
 
 <!--  .......................................................................
       HEADING
@@ -705,7 +696,7 @@ To install, add following lines to ~/.emacs startup file:
           <TD WIDTH="100%">
               <FONT SIZE="-1">
                   <I>
-                  This project, as well as many other opensource projects
+                  This project, as well as many other opensource projects,
                   is hosted by
                   <A HREF="http://www.savannah.org">Savannah</A>.
                   </I>
